--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <!-- Begin Title Content -->
       <div class="page-title">
         <h2>Every Story Has Heroes</h2>
-        <h3>We're 32 people on a journey to learn to love code.</h3>
+        <h3>We're 27 people on a journey to learn to love code.</h3>
       </div>
       <!-- End Title Content -->
 
@@ -97,23 +97,23 @@
               <!-- Begin Student 1 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student name">
+                  <a href="students/nicole_sivek.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/Nicole_Profile.png" class="attachment-blog-thumb wp-post-image" alt="Nicole Sivek">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/nicole_sivek.html">Nicole Sivek</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">Mom trying to code.</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>CODE, LAUGH, LOVE.</p>
                 </div>
                 <div class="clear"></div>
               </li>
@@ -126,6 +126,10 @@
                     <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student name">
                   </a>
                 </div>
+
+
+
+
 
                 <div class="blog-title">
                   <div class="big-comment">
