--- a/index.html
+++ b/index.html
@@ -147,23 +147,23 @@
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student name">
+                  <a href="students/john_easter.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/john_easter_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="john easter">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/john_easter.html">John Easter</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">This is not a tagline.</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>Code. Eat. Sleep.</p>
                 </div>
                 <div class="clear"></div>
               </li>
